# Traffic-Coordinator

./: CMakeLists.txt  README.md  main.cpp
include/: BezierPath.h  Button.h  Car.h  Globals.h  Infrastructure.h  Intersection.h  MathHelper.h  Rectangle.h  Road.h  Scene.h  System.h  Variables.h  mapBuild.h
src/: CMakeLists.txt  main.cpp
src/classes/: AStar.cpp  BezierPath.cpp  Button.cpp  Car.cpp  CarHandler.cpp  Infrastructure.cpp  Intersection.cpp  Node.cpp  Router.cpp  ScenarioBuilder.cpp  Scene.cpp  System.cpp  TrafficCoordinator.cpp  TrafficRules.cpp
src/include/: AStar.h  BezierPath.h  Button.h  Car.h  CarHandler.h  Infrastructure.h  Intersection.h  MathHelper.h  Node.h  Road.h  Router.h  ScenarioBuilder.h  Scene.h  System.h  TrafficCoordinator.h  TrafficRules.h  Variables.h
src/main/: Infrastructure.cpp  Intersection.cpp  main.cpp  mapBuild.cpp
src/main/classes/: BezierPath.cpp  Car.cpp  Infrastructure.cpp  Intersection.cpp  Road.cpp  Scene.cpp  System.cpp  mapBuild.cpp
test/: CMakeLists.txt  test.cpp
